no_writer df created

--- a/notebooks/mlc.ipynb
+++ b/notebooks/mlc.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "af28d17e",
+   "id": "87b9d9e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "157453f2",
+   "id": "eebec576",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e78dcbf4",
+   "id": "d1514f8d",
    "metadata": {},
    "outputs": [
     {
@@ -108,8 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "4bfe3169",
+   "execution_count": 4,
+   "id": "dbf54182",
    "metadata": {},
    "outputs": [
     {
@@ -134,18 +134,18 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ISRC</th>\n",
-       "      <th>Country Code</th>\n",
-       "      <th>Registrant Code</th>\n",
-       "      <th>Year of Reference</th>\n",
-       "      <th>Usage Period</th>\n",
-       "      <th>Streaming Platform (DSP)</th>\n",
+       "      <th>Country_Code</th>\n",
+       "      <th>Registrant_Code</th>\n",
+       "      <th>Year_of_Reference</th>\n",
+       "      <th>Usage_Period</th>\n",
+       "      <th>Streaming_Platform_(DSP)</th>\n",
        "      <th>Streams</th>\n",
-       "      <th>Recording Artist</th>\n",
-       "      <th>Recording Label</th>\n",
-       "      <th>Recording Title</th>\n",
-       "      <th>Release Title</th>\n",
-       "      <th>Recording Duration (Seconds)</th>\n",
-       "      <th>Songwriters Listed</th>\n",
+       "      <th>Recording_Artist</th>\n",
+       "      <th>Recording_Label</th>\n",
+       "      <th>Recording_Title</th>\n",
+       "      <th>Release_Title</th>\n",
+       "      <th>Recording_Duration_(Seconds)</th>\n",
+       "      <th>Songwriters_Listed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -234,28 +234,28 @@
        "</div>"
       ],
       "text/plain": [
-       "           ISRC Country Code Registrant Code  Year of Reference Usage Period  \\\n",
+       "           ISRC Country_Code Registrant_Code  Year_of_Reference Usage_Period  \\\n",
        "0  USUG12101043           US             UG1               21.0          NaN   \n",
        "1  USRC12100543           US             RC1               21.0          NaN   \n",
        "2  USSM12102263           US             SM1               21.0          NaN   \n",
        "3  USLD91731547           US             LD9               17.0     2/1/2021   \n",
        "4  USAT22007048           US             AT2               20.0          NaN   \n",
        "\n",
-       "  Streaming Platform (DSP)     Streams        Recording Artist  \\\n",
+       "  Streaming_Platform_(DSP)     Streams        Recording_Artist  \\\n",
        "0                AudioMack     10,175                   Future   \n",
        "1               SoundCloud      8,597                 LUCKY3RD   \n",
        "2               SoundCloud    261,280                 LUCKY3RD   \n",
        "3                   Trebel          5   Bachata & Merengue Mix   \n",
        "4                AudioMack     62,105                   Foolio   \n",
        "\n",
-       "  Recording Label                            Recording Title  \\\n",
+       "  Recording_Label                            Recording_Title  \\\n",
        "0             NaN   FUTURE FT DEJ LOAF HEY THERE PROD BY DDS   \n",
        "1        LUCKY3RD                     Keep It Cool  LUCKY3RD   \n",
        "2        LUCKY3RD                     Life Goes On  LUCKY3RD   \n",
        "3         Orchard     No dudes de mi- Merengue & Bachata Mix   \n",
        "4             NaN                       WHEN I SEE YOU REMIX   \n",
        "\n",
-       "             Release Title  Recording Duration (Seconds)  Songwriters Listed  \n",
+       "             Release_Title  Recording_Duration_(Seconds)  Songwriters_Listed  \n",
        "0                #unknown#                           181                   0  \n",
        "1   Keep It Cool  LUCKY3RD                           133                   0  \n",
        "2   Life Goes On  LUCKY3RD                           171                   0  \n",
@@ -263,20 +263,20 @@
        "4                #unknown#                           187                   0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mlc.columns = ['ISRC', 'Country Code', 'Registrant Code', 'Year of Reference', 'Usage Period', 'Streaming Platform (DSP)', 'Streams', 'Recording Artist', 'Recording Label', 'Recording Title', 'Release Title', 'Recording Duration (Seconds)', 'Songwriters Listed']\n",
+    "mlc.columns = ['ISRC', 'Country_Code', 'Registrant_Code', 'Year_of_Reference', 'Usage_Period', 'Streaming_Platform_(DSP)', 'Streams', 'Recording_Artist', 'Recording_Label', 'Recording_Title', 'Release_Title', 'Recording_Duration_(Seconds)', 'Songwriters_Listed']\n",
     "mlc.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3def9e56",
+   "execution_count": 5,
+   "id": "cdca3e71",
    "metadata": {},
    "outputs": [
     {
@@ -301,18 +301,18 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ISRC</th>\n",
-       "      <th>Country Code</th>\n",
-       "      <th>Registrant Code</th>\n",
-       "      <th>Year of Reference</th>\n",
-       "      <th>Usage Period</th>\n",
-       "      <th>Streaming Platform (DSP)</th>\n",
+       "      <th>Country_Code</th>\n",
+       "      <th>Registrant_Code</th>\n",
+       "      <th>Year_of_Reference</th>\n",
+       "      <th>Usage_Period</th>\n",
+       "      <th>Streaming_Platform_(DSP)</th>\n",
        "      <th>Streams</th>\n",
-       "      <th>Recording Artist</th>\n",
-       "      <th>Recording Label</th>\n",
-       "      <th>Recording Title</th>\n",
-       "      <th>Release Title</th>\n",
-       "      <th>Recording Duration (Seconds)</th>\n",
-       "      <th>Songwriters Listed</th>\n",
+       "      <th>Recording_Artist</th>\n",
+       "      <th>Recording_Label</th>\n",
+       "      <th>Recording_Title</th>\n",
+       "      <th>Release_Title</th>\n",
+       "      <th>Recording_Duration_(Seconds)</th>\n",
+       "      <th>Songwriters_Listed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -401,28 +401,28 @@
        "</div>"
       ],
       "text/plain": [
-       "           ISRC Country Code Registrant Code  Year of Reference Usage Period  \\\n",
+       "           ISRC Country_Code Registrant_Code  Year_of_Reference Usage_Period  \\\n",
        "0  USUG12101043           US             UG1               21.0          NaN   \n",
        "1  USRC12100543           US             RC1               21.0          NaN   \n",
        "2  USSM12102263           US             SM1               21.0          NaN   \n",
        "3  USLD91731547           US             LD9               17.0     2/1/2021   \n",
        "4  USAT22007048           US             AT2               20.0          NaN   \n",
        "\n",
-       "  Streaming Platform (DSP)     Streams        Recording Artist  \\\n",
+       "  Streaming_Platform_(DSP)     Streams        Recording_Artist  \\\n",
        "0                AudioMack     10,175                   Future   \n",
        "1               SoundCloud      8,597                 LUCKY3RD   \n",
        "2               SoundCloud    261,280                 LUCKY3RD   \n",
        "3                   Trebel          5   Bachata & Merengue Mix   \n",
        "4                AudioMack     62,105                   Foolio   \n",
        "\n",
-       "  Recording Label                            Recording Title  \\\n",
+       "  Recording_Label                            Recording_Title  \\\n",
        "0             NaN   FUTURE FT DEJ LOAF HEY THERE PROD BY DDS   \n",
        "1        LUCKY3RD                     Keep It Cool  LUCKY3RD   \n",
        "2        LUCKY3RD                     Life Goes On  LUCKY3RD   \n",
        "3         Orchard     No dudes de mi- Merengue & Bachata Mix   \n",
        "4             NaN                       WHEN I SEE YOU REMIX   \n",
        "\n",
-       "             Release Title  Recording Duration (Seconds)  Songwriters Listed  \n",
+       "             Release_Title  Recording_Duration_(Seconds)  Songwriters_Listed  \n",
        "0                #unknown#                           181                   0  \n",
        "1   Keep It Cool  LUCKY3RD                           133                   0  \n",
        "2   Life Goes On  LUCKY3RD                           171                   0  \n",
@@ -430,7 +430,7 @@
        "4                #unknown#                           187                   0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,8 +441,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "77272858",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_writer = mlc[mlc.Songwriters_Listed == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1ffb38e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\robsc\\AppData\\Local\\Temp/ipykernel_3812/249889259.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  no_writer['Year_of_Reference'] = no_writer['Year_of_Reference'].astype('Int64')\n"
+     ]
+    }
+   ],
+   "source": [
+    "no_writer['Year_of_Reference'] = no_writer['Year_of_Reference'].astype('Int64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "beb183ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(45839, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(no_writer.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "11e11ff0",
+   "id": "30c587d1",
    "metadata": {},
    "outputs": [],
    "source": []
