--- a/notebooks/MLC_Partner_Project.ipynb
+++ b/notebooks/MLC_Partner_Project.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlc = pd.read_csv('../data/Matching Sample for NSS (100k Lines).xlsx - MLC Data Sample.csv')"
+    "mlc_df = pd.read_csv('../data/Matching Sample for NSS (100k Lines).xlsx - MLC Data Sample.csv')"
    ]
   },
   {
@@ -203,12 +203,12 @@
     }
    ],
    "source": [
-    "mlc.head()"
+    "mlc_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "64bd114f",
    "metadata": {},
    "outputs": [
@@ -363,13 +363,13 @@
        "99999                           259                                          1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mlc.tail()"
+    "mlc_df.tail()"
    ]
   },
   {
@@ -406,12 +406,12 @@
     }
    ],
    "source": [
-    "mlc.info()"
+    "mlc_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7164f08c",
    "metadata": {},
    "outputs": [
@@ -516,38 +516,64 @@
        "max                                     1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mlc.describe()"
+    "mlc_df.describe()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "ebd9e247",
+   "cell_type": "markdown",
+   "id": "35c58693",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "mlc.columns.values[12] = 'Songwriter'"
+    "Experimenting with how to rename columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "17baecbd",
+   "id": "ebd9e247",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlc.columns.values[0] = 'ISRC'"
+    "mlc_df.columns.values[12] = 'Songwriter'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "17baecbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlc_df.columns.values[0] = 'ISRC'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d547e0bf",
+   "metadata": {},
+   "source": [
+    "Renaming all columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ce85bd84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlc_df.columns = ['ISRC', 'Country', 'Registrant', 'Release_Year', 'Period', 'DSP', 'Streams', 'Artist', 'Label', 'Song', 'Album', 'Duration', 'Songwriter']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "881d6d83",
    "metadata": {},
    "outputs": [
@@ -573,17 +599,17 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ISRC</th>\n",
-       "      <th>Country Code</th>\n",
-       "      <th>Registrant Code</th>\n",
-       "      <th>Year of Reference</th>\n",
-       "      <th>Usage Period</th>\n",
-       "      <th>Streaming Platform (DSP)</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Registrant</th>\n",
+       "      <th>Release_Year</th>\n",
+       "      <th>Period</th>\n",
+       "      <th>DSP</th>\n",
        "      <th>Streams</th>\n",
-       "      <th>Recording Artist</th>\n",
-       "      <th>Recording Label</th>\n",
-       "      <th>Recording Title</th>\n",
-       "      <th>Release Title</th>\n",
-       "      <th>Recording Duration (Seconds)</th>\n",
+       "      <th>Artist</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>Song</th>\n",
+       "      <th>Album</th>\n",
+       "      <th>Duration</th>\n",
        "      <th>Songwriter</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -673,48 +699,105 @@
        "</div>"
       ],
       "text/plain": [
-       "           ISRC Country Code Registrant Code  Year of Reference Usage Period  \\\n",
-       "0  USUG12101043           US             UG1               21.0          NaN   \n",
-       "1  USRC12100543           US             RC1               21.0          NaN   \n",
-       "2  USSM12102263           US             SM1               21.0          NaN   \n",
-       "3  USLD91731547           US             LD9               17.0     2/1/2021   \n",
-       "4  USAT22007048           US             AT2               20.0          NaN   \n",
+       "           ISRC Country Registrant  Release_Year    Period         DSP  \\\n",
+       "0  USUG12101043      US        UG1          21.0       NaN   AudioMack   \n",
+       "1  USRC12100543      US        RC1          21.0       NaN  SoundCloud   \n",
+       "2  USSM12102263      US        SM1          21.0       NaN  SoundCloud   \n",
+       "3  USLD91731547      US        LD9          17.0  2/1/2021      Trebel   \n",
+       "4  USAT22007048      US        AT2          20.0       NaN   AudioMack   \n",
        "\n",
-       "  Streaming Platform (DSP)     Streams        Recording Artist  \\\n",
-       "0                AudioMack     10,175                   Future   \n",
-       "1               SoundCloud      8,597                 LUCKY3RD   \n",
-       "2               SoundCloud    261,280                 LUCKY3RD   \n",
-       "3                   Trebel          5   Bachata & Merengue Mix   \n",
-       "4                AudioMack     62,105                   Foolio   \n",
+       "      Streams                  Artist     Label  \\\n",
+       "0     10,175                   Future       NaN   \n",
+       "1      8,597                 LUCKY3RD  LUCKY3RD   \n",
+       "2    261,280                 LUCKY3RD  LUCKY3RD   \n",
+       "3          5   Bachata & Merengue Mix   Orchard   \n",
+       "4     62,105                   Foolio       NaN   \n",
        "\n",
-       "  Recording Label                            Recording Title  \\\n",
-       "0             NaN   FUTURE FT DEJ LOAF HEY THERE PROD BY DDS   \n",
-       "1        LUCKY3RD                     Keep It Cool  LUCKY3RD   \n",
-       "2        LUCKY3RD                     Life Goes On  LUCKY3RD   \n",
-       "3         Orchard     No dudes de mi- Merengue & Bachata Mix   \n",
-       "4             NaN                       WHEN I SEE YOU REMIX   \n",
+       "                                        Song                    Album  \\\n",
+       "0   FUTURE FT DEJ LOAF HEY THERE PROD BY DDS                #unknown#   \n",
+       "1                     Keep It Cool  LUCKY3RD   Keep It Cool  LUCKY3RD   \n",
+       "2                     Life Goes On  LUCKY3RD   Life Goes On  LUCKY3RD   \n",
+       "3     No dudes de mi- Merengue & Bachata Mix            Mega Mix 2010   \n",
+       "4                       WHEN I SEE YOU REMIX                #unknown#   \n",
        "\n",
-       "             Release Title  Recording Duration (Seconds)  Songwriter  \n",
-       "0                #unknown#                           181           0  \n",
-       "1   Keep It Cool  LUCKY3RD                           133           0  \n",
-       "2   Life Goes On  LUCKY3RD                           171           0  \n",
-       "3            Mega Mix 2010                          1250           0  \n",
-       "4                #unknown#                           187           0  "
+       "   Duration  Songwriter  \n",
+       "0       181           0  \n",
+       "1       133           0  \n",
+       "2       171           0  \n",
+       "3      1250           0  \n",
+       "4       187           0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mlc.head()"
+    "mlc_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "87fe62eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ISRC                            1760\n",
+       "Country Code                    1697\n",
+       "Registrant Code                 1697\n",
+       "Year of Reference               1761\n",
+       "Usage Period                    8102\n",
+       "Streaming Platform (DSP)        3999\n",
+       "Streams                            0\n",
+       "Recording Artist                   0\n",
+       "Recording Label                 1008\n",
+       "Recording Title                    0\n",
+       "Release Title                     69\n",
+       "Recording Duration (Seconds)       0\n",
+       "Songwriter                         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlc_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "aa094bcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    54161\n",
+       "0    45839\n",
+       "Name: Songwriter, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlc_df.Songwriter.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "580d0e0a",
    "metadata": {},
    "outputs": [
     {
@@ -731,22 +814,104 @@
        "PT        1\n",
        "BO        1\n",
        "CL        1\n",
-       "Name: Country Code, Length: 77, dtype: int64"
+       "Name: Country, Length: 77, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mlc['Country Code'].value_counts()"
+    "mlc_df.Country.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "16f5ad7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.0    31143\n",
+       "21.0    13510\n",
+       "19.0    11577\n",
+       "18.0     8556\n",
+       "17.0     6025\n",
+       "        ...  \n",
+       "44.0        2\n",
+       "50.0        1\n",
+       "48.0        1\n",
+       "49.0        1\n",
+       "40.0        1\n",
+       "Name: Release_Year, Length: 95, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlc_df.Release_Year.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6a82f609",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Spotify               32268\n",
+       "Apple                 22200\n",
+       "Amazon                14438\n",
+       "Pandora               13777\n",
+       "Tidal                  3521\n",
+       "YouTube                2752\n",
+       "SoundCloud             2122\n",
+       "GTL                    1090\n",
+       "Melodyv                 829\n",
+       "Trebel                  817\n",
+       "iHeart Radio            707\n",
+       "AudioMack               550\n",
+       "NugsNet                 316\n",
+       "LiveXLive               200\n",
+       "Qoboz                   104\n",
+       "Midwest Tape            102\n",
+       "Deezer                   51\n",
+       "Anghami                  46\n",
+       "Sonos                    23\n",
+       "Recisio                  22\n",
+       "Smithsonian              21\n",
+       "Ultimate Guitar          19\n",
+       "PowerMusic                8\n",
+       "Wolfgangs                 4\n",
+       "Fan Label                 4\n",
+       "MixCloud                  4\n",
+       "Pacemaker                 3\n",
+       "Classical Archives        2\n",
+       "MonkingMe                 1\n",
+       "Name: DSP, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlc_df.DSP.value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa094bcb",
+   "id": "3bedee8d",
    "metadata": {},
    "outputs": [],
    "source": []
