--- a/notebooks/MLC_Partner_Project.ipynb
+++ b/notebooks/MLC_Partner_Project.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35c58693",
+   "id": "53379fe1",
    "metadata": {},
    "source": [
     "Experimenting with how to rename columns"
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d547e0bf",
+   "id": "5895938b",
    "metadata": {},
    "source": [
     "Renaming all columns"
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ce85bd84",
+   "id": "76764ba4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "580d0e0a",
+   "id": "6e7750ce",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "16f5ad7d",
+   "id": "37b61505",
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6a82f609",
+   "id": "2762138c",
    "metadata": {},
    "outputs": [
     {
@@ -910,8 +910,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "5782d8a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21149"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlc_df.Artist.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f4738aba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11778"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlc_df.Label.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7a4ce636",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "77"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlc_df.Country.nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9be1b27e",
+   "metadata": {},
+   "source": [
+    "Trying to work on possible correlations? All the plots are too big and making my computer run loudly but doesn't actually produce any plots. The correlations I've tried have given errors (April 21st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7f83319e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Release_Year  Duration  Songwriter\n",
+      "Release_Year      1.000000 -0.472670   -0.486725\n",
+      "Duration         -0.472670  1.000000   -0.539752\n",
+      "Songwriter       -0.486725 -0.539752    1.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mlc_df.corr())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3bedee8d",
+   "id": "d2620547",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9209c04",
    "metadata": {},
    "outputs": [],
    "source": []
