--- a/notebooks/MLC_Partner_Project.ipynb
+++ b/notebooks/MLC_Partner_Project.ipynb
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9be1b27e",
+   "id": "05fcf415",
    "metadata": {},
    "source": [
     "Trying to work on possible correlations? All the plots are too big and making my computer run loudly but doesn't actually produce any plots. The correlations I've tried have given errors (April 21st)"
@@ -1006,15 +1006,21 @@
    "id": "d2620547",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#To try next time:\n",
+    "\n",
+    "df.groupby('your_column_1')['your_column_2'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9209c04",
+   "id": "f28b737d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['your_column'].value_counts().loc[lambda x : x>1]"
+   ]
   }
  ],
  "metadata": {
