--- a/notebooks/MLC_Partner_Project.ipynb
+++ b/notebooks/MLC_Partner_Project.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "64bd114f",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
        "99999                           259                                          1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7164f08c",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
        "max                                     1.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ebd9e247",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "17baecbd",
    "metadata": {},
    "outputs": [],
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "76764ba4",
    "metadata": {},
    "outputs": [],
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "881d6d83",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
        "4       187           0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,30 +739,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "87fe62eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ISRC                            1760\n",
-       "Country Code                    1697\n",
-       "Registrant Code                 1697\n",
-       "Year of Reference               1761\n",
-       "Usage Period                    8102\n",
-       "Streaming Platform (DSP)        3999\n",
-       "Streams                            0\n",
-       "Recording Artist                   0\n",
-       "Recording Label                 1008\n",
-       "Recording Title                    0\n",
-       "Release Title                     69\n",
-       "Recording Duration (Seconds)       0\n",
-       "Songwriter                         0\n",
+       "ISRC            1760\n",
+       "Country         1697\n",
+       "Registrant      1697\n",
+       "Release_Year    1761\n",
+       "Period          8102\n",
+       "DSP             3999\n",
+       "Streams            0\n",
+       "Artist             0\n",
+       "Label           1008\n",
+       "Song               0\n",
+       "Album             69\n",
+       "Duration           0\n",
+       "Songwriter         0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "aa094bcb",
    "metadata": {},
    "outputs": [
@@ -785,7 +785,7 @@
        "Name: Songwriter, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "6e7750ce",
    "metadata": {},
    "outputs": [
@@ -817,7 +817,7 @@
        "Name: Country, Length: 77, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "37b61505",
    "metadata": {},
    "outputs": [
@@ -849,7 +849,7 @@
        "Name: Release_Year, Length: 95, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "2762138c",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
        "Name: DSP, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "5782d8a2",
    "metadata": {},
    "outputs": [
@@ -920,7 +920,7 @@
        "21149"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "f4738aba",
    "metadata": {},
    "outputs": [
@@ -941,7 +941,7 @@
        "11778"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "7a4ce636",
    "metadata": {},
    "outputs": [
@@ -962,7 +962,7 @@
        "77"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "7f83319e",
    "metadata": {},
    "outputs": [
@@ -990,9 +990,9 @@
      "output_type": "stream",
      "text": [
       "              Release_Year  Duration  Songwriter\n",
-      "Release_Year      1.000000 -0.472670   -0.486725\n",
-      "Duration         -0.472670  1.000000   -0.539752\n",
-      "Songwriter       -0.486725 -0.539752    1.000000\n"
+      "Release_Year      1.000000 -0.000481   -0.004529\n",
+      "Duration         -0.000481  1.000000   -0.020790\n",
+      "Songwriter       -0.004529 -0.020790    1.000000\n"
      ]
     }
    ],
@@ -1002,25 +1002,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "d2620547",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DSP           Artist                                  \n",
+       "Amazon        Various artists                             906\n",
+       "              Pinkfong                                    142\n",
+       "              Jim Gaffigan                                141\n",
+       "              Cocomelon                                   128\n",
+       "              Thunderstorm Global Project from TraxLab    117\n",
+       "                                                         ... \n",
+       "iHeart Radio  Yo Gotti feat. Lil Baby                       1\n",
+       "              Young Thug & Young Stoner Life Records        1\n",
+       "              Zomboy featuring Bok Nero                     1\n",
+       "              grandson                                      1\n",
+       "              scondaz                                       1\n",
+       "Name: Artist, Length: 26773, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#To try next time:\n",
-    "\n",
-    "df.groupby('your_column_1')['your_column_2'].value_counts()"
+    "mlc_df.groupby('DSP')['Artist'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f28b737d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Various artists                         967\n",
+       "Lil Durk                                446\n",
+       "Zach Bryan                              394\n",
+       "Youngboy Never Broke Again              335\n",
+       "Taylor Swift                            313\n",
+       "                                       ... \n",
+       "Sir Malcolm Sargent                       2\n",
+       "Megan Thee Stallion|Bankroll Freddie      2\n",
+       "Logic & Marshmello                        2\n",
+       "Kiana Ledé,Jacquees                       2\n",
+       "SEBii,Maple                               2\n",
+       "Name: Artist, Length: 10875, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlc_df['Artist'].value_counts().loc[lambda x : x>1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f28b737d",
+   "id": "b1f80f7f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df['your_column'].value_counts().loc[lambda x : x>1]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
