Exploring DSP and Labels

--- a/notebooks/MLC_Partner_Project.ipynb
+++ b/notebooks/MLC_Partner_Project.ipynb
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "f28b737d",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1056,7 @@
        "Name: Artist, Length: 10875, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,8 +1067,222 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "24bb7ba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DSP           Streams \n",
+       "Amazon          1,132     21\n",
+       "                827       15\n",
+       "                909       14\n",
+       "                1,030     13\n",
+       "                829       13\n",
+       "                          ..\n",
+       "iHeart Radio    98         1\n",
+       "                980        1\n",
+       "                982        1\n",
+       "                984        1\n",
+       "                993        1\n",
+       "Name: Streams, Length: 70082, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlc_df.groupby('DSP')['Streams'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "61448d21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Code from Scott and Rob\n",
+    "#mlc_df.groupby(['DSP', 'Label']).agg({'Streams': ['sum']})\n",
+    "#pd.reset_option('^display.', silent=True)\n",
+    "#.sum().reset_index(name='num_streams').sort_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "dfe28bad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Looking for any relationship between DSP and Label - nulls, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "de89de30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DSP           Label                   \n",
+       "Amazon        Walt Disney Records         353\n",
+       "              Deutsche Grammophon (DG)    316\n",
+       "              Decca Music Group Ltd.      277\n",
+       "              Atlantic Records            244\n",
+       "              Moonbug Entertainment       221\n",
+       "                                         ... \n",
+       "iHeart Radio  WEA Roadrunner                1\n",
+       "              Wall Recordings               1\n",
+       "              Winners Circle  EMPIRE        1\n",
+       "              Winter Hill Records           1\n",
+       "              j.Nile Entertainment          1\n",
+       "Name: Label, Length: 17232, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlc_df.groupby('DSP')['Label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "65ce0b9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Atlantic Records                      1384\n",
+       "Lofi Records                          1232\n",
+       "Warner Records                         995\n",
+       "Columbia                               843\n",
+       "Universal                              818\n",
+       "                                      ... \n",
+       "Twenty7 Records / Human Re Sources       1\n",
+       "Hip-O Select / Motown                    1\n",
+       "NyxTheShield                             1\n",
+       "Relaxing Sounds For Studying             1\n",
+       "Universal Music Taiwan                   1\n",
+       "Name: Label, Length: 11778, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlc_df.Label.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c54598a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          DSP     Label     Streams\n",
+      "0   AudioMack       NaN     10,175 \n",
+      "1  SoundCloud  LUCKY3RD      8,597 \n",
+      "2  SoundCloud  LUCKY3RD    261,280 \n",
+      "3      Trebel   Orchard          5 \n",
+      "4   AudioMack       NaN     62,105 \n"
+     ]
+    }
+   ],
+   "source": [
+    "dsp_and_label = mlc_df[['DSP', 'Label', 'Streams']]\n",
+    "print(dsp_and_label.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e67445c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/4_/948td82x7jlf4pz0c4dtqn_00000gn/T/ipykernel_40337/2254150335.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dsp_and_label['total_streams'] = ' '\n"
+     ]
+    }
+   ],
+   "source": [
+    "dsp_and_label['total_streams'] = ' '"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "130206ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          DSP     Label     Streams total_streams\n",
+      "0   AudioMack       NaN     10,175               \n",
+      "1  SoundCloud  LUCKY3RD      8,597               \n",
+      "2  SoundCloud  LUCKY3RD    261,280               \n",
+      "3      Trebel   Orchard          5               \n",
+      "4   AudioMack       NaN     62,105               \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dsp_and_label.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4e95613c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/4_/948td82x7jlf4pz0c4dtqn_00000gn/T/ipykernel_40337/4233776142.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dsp_and_label['total_streams'] = dsp_and_label.loc[:,'total_streams'].sum()\n"
+     ]
+    }
+   ],
+   "source": [
+    "dsp_and_label['total_streams'] = dsp_and_label.loc[:,'total_streams'].sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b1f80f7f",
+   "id": "aa1e7a77",
    "metadata": {},
    "outputs": [],
    "source": []
